--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- <a href="#"> this is the test with link</a> is used to add link to the site -->
     <table cellspacing="20" >
       <tr>
-        <td><img src="rutvik.jpg" alt="Rutvik profile picture" height="200" width="200",alt="Avatar">
+        <td><img src="rutvik.jpg" alt="Rutvik profile" height="200" width="200",alt="Avatar">
         <style media="screen">
         img {
       border-radius: 50%;
